components/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM cli
    app.kubernetes.io/instance: ""
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: newkamapp5
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: ""
status:
  loadBalancer: {}
