components/frontend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM cli
    app.kubernetes.io/instance: ""
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: newkamapp5
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ""
    weight: 100
status: {}
